# FastAPI2024

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: comands  env.py
alembic/versions/: 4aa9cc288266_create_order_product_table.py  688e4b092659_create_orders_table.py  6b35a14ab11f_create_products_table.py  6fbd4faa33e0_create_posts_table.py  801b11644422_create_profile_table.py  a1e1b7a3a37c_create_users_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  order.py  order_product.py  post.py  product.py  profile.py  user.py
users/: views.py
